--- a/paper/sections/limitations.tex
+++ b/paper/sections/limitations.tex
@@ -5,7 +5,7 @@ The results we have presented in this paper show that contributions -- and the v
 
 According to the original philosophy of the method of reflections \cite{hidalgo2007}, an additional node type reflecting {\it capabilities} should connect producing and produced entities. In Hidalgo-Hausmann approach, capabilities are implicit in the model, mainly because they are not observable. In the context of Wikipedia and open collaboration, incorporating capabilities would be more feasible. We can for instance identify what an editor do best to improve an article, among the five metrics (ratio of mark-up to readable text, number of headings, article length, citations per article length, and outgoing intrawiki links) we have used to assess the quality of an article.
 
-We believe there are two further directions to improve our results. First, we have followed the philosophy of the method of reflections that aims at ranking countries in the world economy. However, the bi-partite network random walker method provides absolute values, which might have a meaning in the context of open collaboration. In future work, we would like to understand further these absolute values. Second, we took the very simplest information for the input matrix $\mathbf{\mathit{M}}$ (i.e. whether an editor has modified a given article, or not). We wonder how the performance of the method might change if richer information is incorporated in the matrix (e.g. number of edits, number of bytes changes). Two exclusive hypotheses could be tested: either the model fits better with richer information, or on the contrary, the model is not as good. In the latter case, we would face a {\it less is more} scenario, which would require elucidating why less rich information accounts better for reality. Or conversely, it could help further understand what ground-truth metrics actually contain richer information, and hence, help reverse engineer most relevant direct measures of editor expertise and article quality.
+We believe there are two further directions to improve our results. First, we have followed the philosophy of the method of reflections that aims at ranking countries in the world economy. However, the bi-partite network random walker method provides absolute values, which might have a meaning in the context of open collaboration. In future work, we would like to understand further these absolute values. Second, we took the very simplest information for the input matrix $\mathbf{\mathit{M_{ea}}}$ (i.e. whether an editor has modified a given article, or not). We wonder how the performance of the method might change if richer information is incorporated in the matrix (e.g. number of edits, number of bytes changes). Two exclusive hypotheses could be tested: either the model fits better with richer information, or on the contrary, the model is not as good. In the latter case, we would face a {\it less is more} scenario, which would require elucidating why less rich information accounts better for reality. Or conversely, it could help further understand what ground-truth metrics actually contain richer information, and hence, help reverse engineer most relevant direct measures of editor expertise and article quality.
 
 As it stands, our method for finding the optimizing pair of control parameters $(\alpha^*,\beta^*)$ for the {\it bi-partite network random walker} model is a grid search, because gradient-based optimizers do not handle the singularities that the model produces. Given that computer time required by grid-search grows at the square of the problem (e.g. the size of a category), more work is needed to improve the efficiency of the optimizing algorithm for calibration of $\alpha$ and $\beta$. We can also improve the method to obtain smoother optimization spaces.
 
