expanded discussion with more storying and two new figures (the figure are rough and need work

--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -5,11 +5,26 @@ This difference might be due to the roughness of the actual metrics for editors 
 
 %We have also found $\alpha \approx 0$ for all categories, reflecting the positive influence of the number of articles edited on editor expertise. This fact tells actually a lot about the model.  The actual metric for editor expertise takes only into consideration the labor hours \cite{geiger2013}, and the more time is spent editing a category, the more likely the editor will have modified a large quantity of articles. The value of $\alpha$ can therefore be explained entirely by the nature of the ground-truth metric. Although it would require further testing with a broad variety of metrics, it seems that the {bi-partite network random walker} model can {\it tune} to whatever ground-truth metric used for calibration. In other words, the values of $\alpha$ and $\beta$ only reflect the structure of value creation in open collaboration, {\it given} the chosen ground-truth metrics. 
 
-We have also found $\alpha \approx 0$ for all categories, reflecting the linear influence of the number of articles edited on editor expertise. The interpretation is that an editor is generally as good as the number of articles they have edited. If we substitute ``good" to our actual metric, labor-hours, we should find that labor-hours are directly related to the number of articles edited. So $\alpha \approx 0$ means that articles-touched is a reasonable proxy for labor-hours. This suggests that there are no diminishing returns for value creation, in investing hours, or similarly, modifying new articles.
+We have also found $\alpha \approx 0$ for all categories. This allows us to simplify our analytic solutions
+ \begin{cases}
+ w^{*}_{e} \sim k_{e}^{1-\beta}\langle k_{a}^{-\alpha} \rangle_{e}\\[7pt]
+ w^{*}_{a} \sim k_{a}^{1-\alpha}\langle k_{e}^{-\beta} \rangle_{a}\\[7pt]
+ \end{cases}
+ 
+Then letting $\alpha = 0$, we can simplify to:
+\begin{cases}
+ w^{*}_{e} \sim k_{e}^{1-\beta}\\[7pt]
+ w^{*}_{a} \sim k_{a}
+ \langle k_{e}^{-\beta} \rangle_{a}\\[7pt]
+ \end{cases} 
+ 
+ Recalling that the variables $\alpha$ and $\beta$ control the preferential attachment to move to more connected editor or article nodes in the transition matrix. We will talk about the importance of "super-users" and super articles.  When we look at all the possible values of $\beta$ on the influence of editor ranking in \ref{fig:influence_editors} and in the influence of artilce ranking.\ref{fig:influence_artilces}. We find that $\beta$, controlling editor prolificness, determines article quality in different ways in  in each category. In over all categories and snapshots we found $-2 < \beta < 2$. 
 
-Finally, we find that whether editor prolificness, which determines article quality, is category dependent. With examples from both ends of the spectrum we find footing to consider $\beta$ as a proxy for ``collaborativeness". Consider the highest $\beta$ found, on category {\it Sexual acts}. We chose to include this category because it could be considered taboo or perverse to edit these articles.  This category's articles are the least collaboratively edited; the high $beta$ means that the most influential editors are "superusers" compared to the rest. An explanation can be seen through the fact that Wikipedia is notable for a vast and constant amount of vandalism and "edit-warring", which often has a juvenile and lewd nature. Articles about Sexual Acts are particularly prone to attracting vandals or edit warring behavior. Therefore the most prolific editors really are disprortionately "superusers" compared to the rest. This is a more chaotic and less collaborative end of the Wikipedia spectrum. On the other hand, there are more prime examples of organized activity. Category {\it Military History of the US} is famous within Wikipedia for its self-organizing task-forces, and at the latest snapshot exhibits $\beta = 0$. In fact, it is the only Category that ever have consecutive snapshots where a maximal correlation came from $\beta < -1$. The interpretation of $\beta < -1$ is that article quality is positively, and super-linearly, proportional to the number of editors touching the article.  As a result of better organization - there is a WikiProject with a hierarchy of coordinators, an IRC channel, and a mailing list - there is less edit-warring and more focused attention in this category. Each visit to the page by good editors has a definite, productive task at hand. This is a standout case of collaboration, and shows in the fact that superusers are less influential to the network. 
+With examples from both ends of the spectrum we find footing to consider $\beta$ as a proxy for ``collaborativeness". Consider the highest $\beta$ found, on category {\it Sexual acts}. We chose to include this category because it could be considered taboo or perverse to edit these articles.  This category's articles are the least collaboratively edited; the high $beta > 1$ means that many edits - albeit very slightly - hurt your ranking does \ref{fig:influence_editors}. While this may seem counter intuitive, an explanation can be seen through the fact that Wikipedia is notable for a vast and constant amount of vandalism and "edit-warring", which often has a juvenile and lewd nature. Articles about Sexual Acts are particularly prone to attracting vandals or edit warring behavior. Therefore the editors making the most edits are not necessarily the ones improving article quality, as we would typically expect.
 
-Overall, it is amazing that so little input information, a binary matrix $M_{ea}$ with only information on	 whether an editor has modified a given article, is sufficient to achieve a high level of fidelity with the empirical data. It suggests some kind of {\it less is more} mechanism, which has direct implications on the overall cost of evaluating contributions in the complex entanglement of contributions. Namely, the use of the bi-partite network random walker model requires only simple and straightforward data mining, compared with, for instance, a model that would primarily rely on the type of words written by editors.
+This category is at the chaotic end of the Wikipedia spectrum. On the other hand, there are more prime examples of organized activity. Category {\it Military History of the US} is famous within Wikipedia for its self-organizing task-forces, and at the latest snapshot exhibits $\beta = 0$. In fact, it is the only Category that ever have consecutive snapshots where a maximal correlation came from $\beta < -1$. The interpretation of $\beta < -1$ is that article quality is very positively  proportional to the number of editors touching the article \ref{fig:influence_artilces}. This is no coincidence, we chose this category, because it has a reputation for being very organized. Military History is a "WikiProject" with a hierarchy of coordinators, an IRC channel, and a mailing list. As a result of the coordination there is less edit-warring and more focused attention in the category. Each visit to the page by good editors has a definite, productive task at hand. This is a standout case of collaboration, and shows in the fact that editors are super-linearly ranked by their edit count. 
+
+Overall, it is amazing that so little input information, a binary matrix $M_{ea}$ with only information on	 whether an editor has modified a given article, is sufficient to achieve a high level of fidelity with the empirical data. It suggests some kind of parsimonious, {\it less is more} mechanism, which has direct implications on the overall cost of evaluating contributions in the complex entanglement of contributions. Namely, the use of the bi-partite network random walker model requires only simple and straightforward data mining, compared with, for instance, a model that would primarily rely on the type of words written by editors.
 
 %$\mathbf{M}$ : most basic measure of collaboration, which represents the bi-partite network contributions to articles by editors: Here, we consider the simplest information available on collaboration: has an editor modified an article at any point in time or not ?
 
