--- a/paper/sections/method.tex
+++ b/paper/sections/method.tex
@@ -78,6 +78,20 @@ G_{ae}(\alpha) = \frac{M_{ea} k_{a}^{-\alpha}}{\sum_{a' = 1}^{N_a} M_{ea'} k_{a'
 
 The transition matrices $G_{ea}(\beta)$ and $G_{ae}(\alpha)$ depend only on the initial conditions: the binary matrix $M_{ea}$, as well as $k_e$ and $k_a$ given by (\ref{HHinit}). The variables $\alpha$ and $\beta$ control the transition probabilities in a similar way. We shall therefore explain only how $\beta$ influences the probability to jump from an article to an editor (i.e. the value of the article positively influences the editor's expertise). For $\beta = 0$, we recover the zero\textsuperscript{th} order iteration (\ref{HHinit}). For $\beta > 0$, the probability to jump from article $a$ to editor $e$ is a power law function $\sim 1/k_{e}^{\beta}$ of the sum of articles $k_{e}$  modified by editor $e$. Hence, the larger $k_{e}$, the lower the probability to jump from $a$ to $e$ relative to other editors. On the contrary, if $\beta < 0$ the probability to jump from an article to an editor is a positive function of the sum of articles modified by the editor. For $-1 < \beta < 0$, the function is concave, while for $\beta < -1$, the function is convex, which means that the more articles have been edited by the editor, the even more the positive influence on articles. In a nutshell, $\beta$ relates the amount of articles edited on the overall editor's expertise, which in turn has an influence on each edited article (along with the influence of other editors). If $\beta >> 0$, the positive influence of the number of contributed articles on the editor's expertise decreases. If $\beta$ close to $0$, the number of contributed articles increases linearly the editor's expertise. The same considerations hold for $\alpha$ and the probability $G_{ae}(\alpha)$ to jump from an editor to an article (i.e. the expertise of the editor positively influences the quality of an article).
 
+\begin{figure}[!t]
+\centering
+\includegraphics[width=0.9\columnwidth]{../Figures/influence_editors.png}.
+\caption{This is how \beta influences this editor rankings.}
+\label{fig:influence_editors}
+\end{figure}
+
+\begin{figure}[!t]
+\centering
+\includegraphics[width=0.9\columnwidth]{../Figures/influence_articles.png}.
+\caption{This is how \beta influences this editor rankings.}
+\label{fig:influence_artilces}
+\end{figure} 
+
 After each iteration, we have expertise and quality scores, which allow ranking editors and articles. When the rankings for both editors and articles do not change in two successive iterations we consider that the {\it bi-partite network random walker} model has converged. We have verified that the method converges on all our 12 Wikipedia categories.  Figure \ref{fig:convergence} shows the evolution of expertise $w_e$ ranked among editors having contributed to articles in the {\it Feminist Writers} category on Wikipedia for arbitrary control parameters: $(\alpha,\beta) =(0, 0.72)$. Starting from the sum of contributed articles as the initial step, we can see how the algorithm progressively ranks editors: some editors with initial low rank (i.e. with few articles edited), get a higher rank as the number of iterations increases. They most probably have edited and contributed to few, but high quality articles. Similarly, some initially high ranked editors, gradually drop in the ranking. They have edited many, but low quality articles. In the case of category {\it Feminist Writers}, the algorithm converges with clearly stable ranks, after nearly $64$ iterations.
 
 \begin{figure}[!t]
