address bin values

--- a/paper/cscw/cscw2015.tex
+++ b/paper/cscw/cscw2015.tex
@@ -212,5 +212,5 @@ breaklinks=true,
 % uncomment the following line:
 % \small
 \bibliographystyle{acm-sigchi}
-\bibliography{../tmaillart.bib,../additional.bib}
+\bibliography{../tmaillart.bib}
 \end{document}
