--- a/paper/tmaillart.bib
+++ b/paper/tmaillart.bib
@@ -429,19 +429,19 @@ have a smaller superlinearity and less variability.},
                               W
                               -magnitudes (1977–2004 and 1977–2006). For this, we suggest a new parametric model for the distribution of main-shock magnitudes, which is composed of two branches, the pure Gutenberg-Richter distribution up to an upper magnitude threshold m
                               1, followed by another branch with a maximum upper magnitude bound M
-                              max, which we refer to as the two-branch model. We find that the number of main events in the catalog (N = 3975 for 1977–2004 and N = 4193 for 1977–2006) is insufficient for a direct estimation of the parameters of this model, due to the inherent instability of the estimation problem. This problem is likely to be the same for any other two-branch model. This inherent limitation can be explained by the fact that only a small fraction of the empirical data populates the second branch. We then show that using the set of maximum magnitudes (the set of T-maxima) in windows of duration T days provides a significant improvement, in particular (i) by minimizing the negative impact of time-clustering of foreshock/main shock/aftershock sequences in the estimation of the tail of magnitude distribution, and (ii) by providing via a simulation method reliable estimates of the biases in the Moment estimation procedure (which turns out to be more efficient than the Maximum Likelihood estimation). We propose a method for the determination of the optimal choice of the T value minimizing the mean-squares-error of the estimation of the form parameter of the GEV distribution approximating the sample distribution of T-maxima, which yields T
-                              optimal = 500 days. We have estimated the following quantiles of the distribution of T-maxima for the whole period 1977–2006: Q
+                              max, which we refer to as the two-branch model. We find that the number of main events in the catalog (N = 3975 for 1977–2004 and N = 4193 for 1977–2006) is insufficient for a direct estimation of the parameters of this model, due to the inherent instability of the estimation problem. This problem is likely to be the same for any other two-branch model. This inherent limitation can be explained by the fact that only a small fraction of the empirical data populates the second branch. We then show that using the set of maximum magnitudes (the set of T-maxima) in windows of duration T days provides a significant improvement, in particular (i) by minimizing the negative impact of time-clustering of foreshock/main shock/aftershock sequences in the estimation of the tail of magnitude distribution, and (ii) by providing via a simulation method reliable estimates of the biases in the Moment estimation procedure (which turns out to be more efficient than the Maximum Likelihood estimation). We propose a method for the determination of the optimal choice of the T value minimizing the mean-squares-error of the estimation of the form parameter of the GEV distribution approximating the sample distribution of T-maxima, which yields T
+                              optimal = 500 days. We have estimated the following quantiles of the distribution of T-maxima for the whole period 1977–2006: Q
                               16\%(M
-                              max) = 9.3, Q
+                              max) = 9.3, Q
                               50\%(M
-                              max) = 9.7 and Q
+                              max) = 9.7 and Q
                               84\%(M
-                              max) = 10.3. Finally, we suggest two more stable statistical characteristics of the tail of the distribution of earthquake magnitudes: The quantile Q
+                              max) = 10.3. Finally, we suggest two more stable statistical characteristics of the tail of the distribution of earthquake magnitudes: The quantile Q
                               T
                               (q) of a high probability level q for the T-maxima, and the probability of exceedance of a high threshold magnitude ρT
-                               (m*)  = P{m
+                               (m*)  = P{m
                               k
-                                ≥ m*}. We obtained the following sample estimates for the global Harvard catalog 
+                                ≥ m*}. We obtained the following sample estimates for the global Harvard catalog 
                                 
                                 \$ \hat{Q}\_T (q=0.98)=8.6 {\pm}0.2 \$
                                and 
@@ -449,13 +449,13 @@ have a smaller superlinearity and less variability.},
                                 \$ \hat{\rho}\_T (8)=0.13-0.20. \$
                                The comparison between our estimates for the two periods 1977–2004 and 1977–2006, where the latter period included the great Sumatra earthquake 24.12.2004, m
                               W
-                               = 9.0 confirms the instability of the estimation of the parameter M
+                               = 9.0 confirms the instability of the estimation of the parameter M
                               max and the stability of Q
                               T
                               (q) and ρT
-                               (m*) = P{m
+                               (m*) = P{m
                               k
-                               ≥ m*}.},
+                               ≥ m*}.},
     author = {Pisarenko, V. F. and Sornette, A. and Sornette, D. and Rodkin, M. V.},
     booktitle = {Pure and Applied Geophysics},
     citeulike-article-id = {2938621},
@@ -1184,7 +1184,7 @@ constructive responses to these results.}},
 }
 
 @article{ingaccolo2010scaling,
-    abstract = {{The scaling properties of human EEG have so far been analyzed predominantly in the framework of detrended fluctuation analysis (DFA). In particular, these studies suggested the existence of power-law correlations in EEG. In DFA, EEG time series are tacitly assumed to be made up of fluctuations, whose scaling behavior reflects neurophysiologically important information and polynomial trends. Even though these trends are physiologically irrelevant, they must be eliminated (detrended) to reliably estimate such measures as Hurst exponent or fractal dimension. Here, we employ the diffusion entropy method to study the scaling behavior of EEG. Unlike DFA, this method does not rely on the assumption of trends superposed on EEG fluctuations. We find that the growth of diffusion entropy of EEG increments of awake subjects with closed eyes is arrested only after approximately 0.5 s. We demonstrate that the salient features of diffusion entropy dynamics of EEG, such as the existence of short-term scaling, asymptotic saturation, and alpha wave modulation, may be faithfully reproduced using a dissipative, first-order, stochastic differential equation—an extension of the Langevin equation. The structure of such a model is utterly different from the  ” noise+trend” paradigm of DFA. Consequently, we argue that the existence of scaling properties for EEG dynamics is an open question that necessitates further studies.}},
+    abstract = {{The scaling properties of human EEG have so far been analyzed predominantly in the framework of detrended fluctuation analysis (DFA). In particular, these studies suggested the existence of power-law correlations in EEG. In DFA, EEG time series are tacitly assumed to be made up of fluctuations, whose scaling behavior reflects neurophysiologically important information and polynomial trends. Even though these trends are physiologically irrelevant, they must be eliminated (detrended) to reliably estimate such measures as Hurst exponent or fractal dimension. Here, we employ the diffusion entropy method to study the scaling behavior of EEG. Unlike DFA, this method does not rely on the assumption of trends superposed on EEG fluctuations. We find that the growth of diffusion entropy of EEG increments of awake subjects with closed eyes is arrested only after approximately 0.5 s. We demonstrate that the salient features of diffusion entropy dynamics of EEG, such as the existence of short-term scaling, asymptotic saturation, and alpha wave modulation, may be faithfully reproduced using a dissipative, first-order, stochastic differential equation—an extension of the Langevin equation. The structure of such a model is utterly different from the  ” noise+trend” paradigm of DFA. Consequently, we argue that the existence of scaling properties for EEG dynamics is an open question that necessitates further studies.}},
     author = {Ignaccolo, Massimiliano and Latka, Mirek and Jernajczyk, Wojciech and Grigolini, Paolo and West, BruceJ},
     booktitle = {Journal of Biological Physics},
     citeulike-article-id = {5441599},
@@ -3333,7 +3333,7 @@ have to acknowledge total security is a chimera--and carry more insurance.
 }
 
 @article{dibella2013,
-    abstract = {{Open source software development is becoming always more relevant. Understanding the behavior of developers in open source software projects and identifying the kinds of their contributions is an essential step to improve the efficiency of the development process and to organize the development teams more effectively. Moreover, understanding the level of participation of the different developers helps to understand which members of the development team are more important than others and who are the actual key developers. This paper investigates the behavior of open source developers and the structure of the development of open source projects through the analysis of a very large dataset: 10 well-known and widely used open source software projects for a total of more than 4 MLOC (millions of lines of code) modified distributed in more than 200 K versions. This study builds on the top of other studies in this area applying a set of rigorous statistical techniques, analyzing how developers contribute to the projects. Its novelty is in the fine gain analysis of the developers that have commit rights on the repository of the project they work on, in the automated identification of key contributors of the project, in the size of the analyzed datasets, and in the statistical techniques used to classify the behavior of the developers in an automated way. To collect such large volume of data and to ensure their integrity, a tool to automatically mine open source version control systems has been used. The main result of this study is the identification of a recurrent pattern of four kinds of contributors with the same characteristics in all the projects analyzed even if the projects are very different in domain, size, language, etc.}},
+    abstract = {{Open source software development is becoming always more relevant. Understanding the behavior of developers in open source software projects and identifying the kinds of their contributions is an essential step to improve the efficiency of the development process and to organize the development teams more effectively. Moreover, understanding the level of participation of the different developers helps to understand which members of the development team are more important than others and who are the actual key developers. This paper investigates the behavior of open source developers and the structure of the development of open source projects through the analysis of a very large dataset: 10 well-known and widely used open source software projects for a total of more than 4 MLOC (millions of lines of code) modified distributed in more than 200 K versions. This study builds on the top of other studies in this area applying a set of rigorous statistical techniques, analyzing how developers contribute to the projects. Its novelty is in the fine gain analysis of the developers that have commit rights on the repository of the project they work on, in the automated identification of key contributors of the project, in the size of the analyzed datasets, and in the statistical techniques used to classify the behavior of the developers in an automated way. To collect such large volume of data and to ensure their integrity, a tool to automatically mine open source version control systems has been used. The main result of this study is the identification of a recurrent pattern of four kinds of contributors with the same characteristics in all the projects analyzed even if the projects are very different in domain, size, language, etc.}},
     author = {di Bella, Enrico and Sillitti, Alberto and Succi, Giancarlo},
     citeulike-article-id = {11679520},
     citeulike-linkout-0 = {http://dx.doi.org/10.1016/j.ins.2012.09.031},
@@ -3352,7 +3352,7 @@ have to acknowledge total security is a chimera--and carry more insurance.
 }
 
 @article{baytiyeh2010,
-    abstract = {{To learn about what drives people to devote their time and expertise to creating and supporting free/open source software, a survey with Likert-scaled items measuring different types of motivations was sent to contributors of several open source projects. Open-ended comments were used to illustrate the Likert-scaled items and open-ended questions allowed respondents to express their reasons for participating in these open source communities. Results indicate that the open source contributors (n = 110, 38 paid to work on OSS projects and 72 volunteers) are motivated primarily by a sense of altruism as well as the desire to create and learn. Payment did not significantly impact the reasons for contributing to OSS projects. The comments and open-ended questions validated the findings and indicated that building a  ” Utopian” community – the desire to help for the greater good worldwide – is one of the most important motivators. Also, respondents revealed that they join and persist as members of open source communities because they enjoy the freedom to create and share free software, tools and knowledge with others inside and outside the community.}},
+    abstract = {{To learn about what drives people to devote their time and expertise to creating and supporting free/open source software, a survey with Likert-scaled items measuring different types of motivations was sent to contributors of several open source projects. Open-ended comments were used to illustrate the Likert-scaled items and open-ended questions allowed respondents to express their reasons for participating in these open source communities. Results indicate that the open source contributors (n = 110, 38 paid to work on OSS projects and 72 volunteers) are motivated primarily by a sense of altruism as well as the desire to create and learn. Payment did not significantly impact the reasons for contributing to OSS projects. The comments and open-ended questions validated the findings and indicated that building a  ” Utopian” community – the desire to help for the greater good worldwide – is one of the most important motivators. Also, respondents revealed that they join and persist as members of open source communities because they enjoy the freedom to create and share free software, tools and knowledge with others inside and outside the community.}},
     author = {Baytiyeh, Hoda and Pfaffman, Jay},
     citeulike-article-id = {7269768},
     citeulike-linkout-0 = {http://dx.doi.org/10.1016/j.chb.2010.04.008},
@@ -4401,7 +4401,7 @@ have to acknowledge total security is a chimera--and carry more insurance.
 }
 
 @article{kampf2012,
-    abstract = {{Internet-based social networks often reflect extreme events in nature and society by drastic increases in user activity. We study and compare the dynamics of the two major complex processes necessary for information spread via the online encyclopedia 'Wikipedia', i.e., article editing (information upload) and article access (information viewing) based on article edit-event time series and (hourly) user access-rate time series for all articles. Daily and weekly activity patterns occur in addition to fluctuations and bursting activity. The bursts (i.e., significant increases in activity for an extended period of time) are characterized by a power-law distribution of durations of increases and decreases. For describing the recurrence and clustering of bursts we investigate the statistics of the return intervals between them. We find stretched exponential distributions of return intervals in access-rate time series, while edit-event time series yield simple exponential distributions. To characterize the fluctuation behavior we apply detrended fluctuation analysis (DFA), finding that most article access-rate time series are characterized by strong long-term correlations with fluctuation exponents \^{I}±≈0.9\^{I}±≈0.9. The results indicate significant differences in the dynamics of information upload and access and help in understanding the complex process of collecting, processing, validating, and distributing information in self-organized social networks. \^{a}º We study the dynamics of information spread via Wikipedia articles. \^{a}º Fluctuations of access-rate time series scale with long-term persistence. \^{a}º Edit-events are only short-term correlated. \^{a}º The dynamics of both complex processes differ drastically.}},
+    abstract = {{Internet-based social networks often reflect extreme events in nature and society by drastic increases in user activity. We study and compare the dynamics of the two major complex processes necessary for information spread via the online encyclopedia 'Wikipedia', i.e., article editing (information upload) and article access (information viewing) based on article edit-event time series and (hourly) user access-rate time series for all articles. Daily and weekly activity patterns occur in addition to fluctuations and bursting activity. The bursts (i.e., significant increases in activity for an extended period of time) are characterized by a power-law distribution of durations of increases and decreases. For describing the recurrence and clustering of bursts we investigate the statistics of the return intervals between them. We find stretched exponential distributions of return intervals in access-rate time series, while edit-event time series yield simple exponential distributions. To characterize the fluctuation behavior we apply detrended fluctuation analysis (DFA), finding that most article access-rate time series are characterized by strong long-term correlations with fluctuation exponents \^{I}±≈0.9\^{I}±≈0.9. The results indicate significant differences in the dynamics of information upload and access and help in understanding the complex process of collecting, processing, validating, and distributing information in self-organized social networks. \^{a}º We study the dynamics of information spread via Wikipedia articles. \^{a}º Fluctuations of access-rate time series scale with long-term persistence. \^{a}º Edit-events are only short-term correlated. \^{a}º The dynamics of both complex processes differ drastically.}},
     author = {K\"{a}mpf, Mirko and Tismer, Sebastian and Kantelhardt, Jan W. and Muchnik, Lev},
     citeulike-article-id = {11080490},
     citeulike-linkout-0 = {http://dx.doi.org/10.1016/j.physa.2012.07.004},
@@ -4539,12 +4539,12 @@ EM algorithm for Multiscale Hawkes Processes}}
               probability density functions Pdata(r) (and
               its cumulative version)
               of the number r of earthquakes in finite space-time windows
-              for the California catalog, over fixed spatial boxes 5 ×5 km2,
-              20 ×20 km2 and 50 ×50 km2
+              for the California catalog, over fixed spatial boxes 5 ×5 km2,
+              20 ×20 km2 and 50 ×50 km2
               and time intervals 
                                 
                                 \$\tau =10,\~{}100\$
-                               and 1000 days. The data can
+                               and 1000 days. The data can
               be represented by asymptotic power law tails together with several
               cross-overs. These observations are
               explained by a simple stochastic branching process previously studied by
@@ -6820,7 +6820,7 @@ existing known limitations of PSA when aiming at the estimation of total risks.}
 }
 
 @article{henkel2006,
-    abstract = {{This paper provides a quantitative study (N = 268) of patterns of free revealing of firm-developed innovations within embedded Linux, a type of open source software (OSS). I find that firms, without being obliged to do so, contribute many of their own developments back to public embedded Linux code, eliciting and indeed receiving informal development support from other firms. That is, they perform a part of their product development open to the public—an unthinkable idea for traditionally minded managers. Such openness obviously entails the challenge of protecting one's intellectual property. I find that firms address this issue by revealing selectively. They reveal, on average, about half of the code they have developed, while protecting the other half by various means. Revealing is strongly heterogeneous among firms. Multivariate analysis can partly explain this heterogeneity by firm characteristics and the firm's purpose behind revealing. An analysis of reasons for revealing and of the type of revealed code shows that different types of firms have different rationales for openness. Implications for management are that the conflict between downsides and benefits of openness appears manageable. Provided selective revealing is practiced deliberately, the opportunities of open development dominate.}},
+    abstract = {{This paper provides a quantitative study (N = 268) of patterns of free revealing of firm-developed innovations within embedded Linux, a type of open source software (OSS). I find that firms, without being obliged to do so, contribute many of their own developments back to public embedded Linux code, eliciting and indeed receiving informal development support from other firms. That is, they perform a part of their product development open to the public—an unthinkable idea for traditionally minded managers. Such openness obviously entails the challenge of protecting one's intellectual property. I find that firms address this issue by revealing selectively. They reveal, on average, about half of the code they have developed, while protecting the other half by various means. Revealing is strongly heterogeneous among firms. Multivariate analysis can partly explain this heterogeneity by firm characteristics and the firm's purpose behind revealing. An analysis of reasons for revealing and of the type of revealed code shows that different types of firms have different rationales for openness. Implications for management are that the conflict between downsides and benefits of openness appears manageable. Provided selective revealing is practiced deliberately, the opportunities of open development dominate.}},
     author = {Henkel, Joachim},
     citeulike-article-id = {2866511},
     citeulike-linkout-0 = {http://dx.doi.org/10.1016/j.respol.2006.04.010},
@@ -7569,7 +7569,7 @@ processes.}},
 }
 
 @article{hisano2011,
-    abstract = {{Zipf\^{a}s power-law distribution is a generic empirical statistical regularity found in many complex systems. However, rather than universality with a single power-law exponent (equal to 1 for Zipf\^{a}s law), there are many reported deviations that remain unexplained. A recently developed theory finds that the interplay between (i)\^{A} one of the most universal ingredients, namely stochastic proportional growth, and (ii) birth and death processes, leads to a generic power-law distribution with an exponent that depends on the characteristics of each ingredient. Here, we report the first complete empirical test of the theory and its application, based on the empirical analysis of the dynamics of market shares in the product market. We estimate directly the average growth rate of market shares and its standard deviation, the birth rates and the \^{a}death\^{a} (hazard) rate of products. We find that temporal variations and product differences of the observed power-law exponents can be fully captured by the theory with no adjustable parameters. Our results can be generalized to many systems for which the statistical properties revealed by power-law exponents are directly linked to the underlying generating mechanism.}},
+    abstract = {{Zipf\^{a}s power-law distribution is a generic empirical statistical regularity found in many complex systems. However, rather than universality with a single power-law exponent (equal to 1 for Zipf\^{a}s law), there are many reported deviations that remain unexplained. A recently developed theory finds that the interplay between (i)\^{A} one of the most universal ingredients, namely stochastic proportional growth, and (ii) birth and death processes, leads to a generic power-law distribution with an exponent that depends on the characteristics of each ingredient. Here, we report the first complete empirical test of the theory and its application, based on the empirical analysis of the dynamics of market shares in the product market. We estimate directly the average growth rate of market shares and its standard deviation, the birth rates and the \^{a}death\^{a} (hazard) rate of products. We find that temporal variations and product differences of the observed power-law exponents can be fully captured by the theory with no adjustable parameters. Our results can be generalized to many systems for which the statistical properties revealed by power-law exponents are directly linked to the underlying generating mechanism.}},
     author = {Hisano, Ryohei and Sornette, Didier and Mizuno, Takayuki},
     citeulike-article-id = {9704959},
     citeulike-linkout-0 = {http://dx.doi.org/10.1103/physreve.84.026117},
@@ -12571,7 +12571,7 @@ important class of entrepreneurs, those backed by venture capital. Using a dynam
 }
 
 @article{raymond1999,
-    abstract = {{Abstract  I anatomize a successful open-source project, fetchmail, that was run as a deliberate test of some theories about software engineering suggested by the history of Linux. I discuss these theories in terms of two fundamentally different development styles, the "cathedral" model, representing most of the commercial world, versus the "bazaar" model of the Linux world. I show that these models derive from opposing assumptions about the nature of the software-debugging task. I then make a sustained argument from the Linux experience for the proposition that "Given enough eyeballs, all bugs are shallow," suggest productive analogies with other self-correcting systems of selfish agents, and conclude with some exploration of the implications of this insight for the future of software.}},
+    abstract = {{Abstract  I anatomize a successful open-source project, fetchmail, that was run as a deliberate test of some theories about software engineering suggested by the history of Linux. I discuss these theories in terms of two fundamentally different development styles, the "cathedral" model, representing most of the commercial world, versus the "bazaar" model of the Linux world. I show that these models derive from opposing assumptions about the nature of the software-debugging task. I then make a sustained argument from the Linux experience for the proposition that "Given enough eyeballs, all bugs are shallow," suggest productive analogies with other self-correcting systems of selfish agents, and conclude with some exploration of the implications of this insight for the future of software.}},
     author = {Raymond, Eric},
     citeulike-article-id = {6532298},
     citeulike-linkout-0 = {http://dx.doi.org/10.1007/s12130-999-1026-0},
@@ -15089,7 +15089,7 @@ natural selection in mathematical terms.}},
 }
 
 @article{gandolfo2008,
-    abstract = {{Abstract  The economics commonly credited with the introduction of the Lotka-Volterra equations into economics to examine cyclical problems is Richard Goodwin (1965). In this paper we show that the Italian economist Giuseppe Palomba had used these equationsmuch earlier (1939), and describe Palomba's model in detail, pointing out his surprisinglymodern conclusions and suggestions for future work.}},
+    abstract = {{Abstract  The economics commonly credited with the introduction of the Lotka-Volterra equations into economics to examine cyclical problems is Richard Goodwin (1965). In this paper we show that the Italian economist Giuseppe Palomba had used these equationsmuch earlier (1939), and describe Palomba's model in detail, pointing out his surprisinglymodern conclusions and suggestions for future work.}},
     author = {Gandolfo, Giancarlo},
     citeulike-article-id = {3914352},
     citeulike-linkout-0 = {http://dx.doi.org/10.1007/s12210-008-0023-7},
@@ -16170,3 +16170,46 @@ pragmatic.}},
     year = {1999}
 }
 
+@misc{klein,
+    author = {Klein, Maximilian},
+    publisher = {Unpublished},
+    title = {{Kumusha Takes Wiki: Actionable Metrics for Uganda and C\^{o}te d'Ivoire}},
+    year = {2014},
+    url = {http://notconfusing.com/kumusha-takes-wiki-actionable-metrics-for-uganda-and-cote-divoire/}
+}
+
+@inproceedings{burke2008taking,
+  title={Taking up the mop: identifying future wikipedia administrators},
+  author={Burke, Moira and Kraut, Robert},
+  booktitle={CHI'08 extended abstracts on Human factors in computing systems},
+  pages={3441--3446},
+  year={2008},
+  organization={ACM}
+}
+
+@article{vonkrogh2014designing,
+	author = {von Krogh, Georg and Maillart, Thomas and Haefliger, Stefan and Sornette, Didier},
+	title = {Designing Organizations for Productive Bursts},
+	journal = {under review},
+	year = {2014}
+}
+
+@article{kane2011,
+	author = {Kane, G. C.}, 
+	year = {2011},
+	title =  {A multimethod study of information quality in wiki collaboration},
+	journal = {ACM Trans. Manag. Inform. Syst.},
+	volume = {2, 1, Article 4},
+	pages = {16 pages},
+	DOI = {10.1145/1929916.1929920 http://doi.acm.org/10.1145/1929916.1929920}
+}
+
+@inproceedings{keegan2012,
+  title={Do Editors or Articles Drive Collaboration? Multilevel
+Statistical Network Analysis of Wikipedia Coauthorship},
+  author={Brian Keegan, Darren Gergle, Noshir Contractor},
+  booktitle={CSCW’12,},
+  year={2012},
+  organization={ACM},
+  location={Seattle, Washington, USA}
+}
