motivating state of the art metrics

--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -5,7 +5,7 @@ This difference might be due to the roughness of the actual metrics for editors 
 
 %We have also found $\alpha \approx 0$ for all categories, reflecting the positive influence of the number of articles edited on editor expertise. This fact tells actually a lot about the model.  The actual metric for editor expertise takes only into consideration the labor hours \cite{geiger2013}, and the more time is spent editing a category, the more likely the editor will have modified a large quantity of articles. The value of $\alpha$ can therefore be explained entirely by the nature of the ground-truth metric. Although it would require further testing with a broad variety of metrics, it seems that the {bi-partite network random walker} model can {\it tune} to whatever ground-truth metric used for calibration. In other words, the values of $\alpha$ and $\beta$ only reflect the structure of value creation in open collaboration, {\it given} the chosen ground-truth metrics. 
 
-We have also found $\alpha \approx 0$ for all categories. This result shares similarity  with \ref{keegan2012}, who found that "editor experience and the features of articles in their contribution history have a stronger influence on self-organization than article features and the attributes of their editors". In this way if editor expertise is more important, it makes sense that we find it, $\alpha$, to be a near-constant (although that doesn't explain why it should be zero). Allowing for a moment, $\alpha = 0$ we can simplify our analytic solutions to gain a more intuitive interpretation of the calibration results.
+We have also found $\alpha \approx 0$ for all categories. This result shares similarity  with \cite{keegan2012}, who found that "editor experience and the features of articles in their contribution history have a stronger influence on self-organization than article features and the attributes of their editors". In this way if editor expertise is more important, it makes sense that we find it, $\alpha$, to be a near-constant (although that doesn't explain why it should be zero). Allowing for a moment, $\alpha = 0$ we can simplify our analytic solutions to gain a more intuitive interpretation of the calibration results.
 
  \begin{cases}
  w^{*}_{e} \sim k_{e}^{1-\beta}\langle k_{a}^{-\alpha} \rangle_{e}\\[7pt]
@@ -21,9 +21,9 @@ Then letting $\alpha = 0$, we can simplify to:
  
  Recalling that the variables $\alpha$ and $\beta$ control the preferential attachment to move to more connected editor or article nodes in the transition matrix. We will talk about the importance of "super-users" and "super-articles" as those nodes nodes that would be effected greatly by preferential attachment.  We concentrate on our unfix variable, $\beta$, as it influences editor ranking \ref{fig:influence_editors} and article ranking.\ref{fig:influence_artilces}. Over all categories and snapshots we found $-2 < \beta < 2$, which has a related spectrum of interpretations. With examples from both ends of the spectrum we find footing to consider $\beta$ as a proxy for ``collaborativeness". 
  
-Consider the highest $\beta$ found, on category {\it Sexual acts}. We chose to include this category because it could be considered taboo or perverse to edit these articles.  This category's articles are the least collaboratively edited; the high $beta > 1$ means that many edits - albeit very slightly - hurt your ranking does \ref{fig:influence_editors}. While this may seem counter intuitive, an explanation can be seen through the fact that Wikipedia is notable for a vast and constant amount of vandalism and "edit-warring", which often has a juvenile and lewd nature. Previous Wikipedia research has shown this unintuitive result, that on some articles most active editors exhibit deleting behavior that would lower metric-based article quality ratings \ref{kane2011}. Articles about Sexual Acts, because of their socially-sensitive nature are particularly prone to attracting vandals or edit-warring behavior. Therefore the editors making the most edits are not necessarily the ones improving article quality, as we would typically expect.
+Consider the highest $\beta$ found, on category {\it Sexual acts}. We chose to include this category because it could be considered taboo or perverse to edit these articles.  This category's articles are the least collaboratively edited; the high $beta > 1$ means that many edits - albeit very slightly - hurt your ranking does \ref{fig:influence_editors}. While this may seem counter intuitive, an explanation can be seen through the fact that Wikipedia is notable for a vast and constant amount of vandalism and "edit-warring", which often has a juvenile and lewd nature. Previous Wikipedia research has shown this unintuitive result, that on some articles most active editors exhibit deleting behavior that would lower metric-based article quality ratings \cite{kane2011}. Articles about Sexual Acts, because of their socially-sensitive nature are particularly prone to attracting vandals or edit-warring behavior. Therefore the editors making the most edits are not necessarily the ones improving article quality, as we would typically expect.
 
-This category is at the chaotic end of the Wikipedia spectrum. On the other hand, there are more prime examples of organized activity. Category {\it Military History of the US} is famous within Wikipedia for its self-organizing task-forces, and at the latest snapshot exhibits $\beta = 0$. In fact, it is the only Category that ever have consecutive snapshots where a maximal correlation came from $\beta < -1$. The interpretation of $\beta < -1$ is that article quality is very positively proportional to the number of editors touching the article \ref{fig:influence_artilces}. This is no coincidence, we chose this category, because it has a reputation for being very organized. Military History is a "WikiProject" with a hierarchy of coordinators, an IRC channel, and a mailing list. As a result of the coordination there is less edit-warring and more focused attention in the category. Each visit to the page by good editors has a definite, productive task at hand. This can also be seen by the $\beta \leq 0$ editor influence \ref{fig:influence_editors}, that super-users are linearly or super-linearly rewarded in rank for their contributions. It requires a frictionless, collaborative environment where the more you edit, the more and more experienced you become. It's also worth noting that \ref{keegan2012}, found that "coordination demands influence the tendency of editors with similar levels of experience to work together". In our scenario that would mean that the coordination present attracts super-users to work in the productive environment. The category Military History is empirically a standout case of collaboration, and shows in its calibrated $\beta$ measurements. 
+This category is at the chaotic end of the Wikipedia spectrum. On the other hand, there are more prime examples of organized activity. Category {\it Military History of the US} is famous within Wikipedia for its self-organizing task-forces, and at the latest snapshot exhibits $\beta = 0$. In fact, it is the only Category that ever have consecutive snapshots where a maximal correlation came from $\beta < -1$. The interpretation of $\beta < -1$ is that article quality is very positively proportional to the number of editors touching the article \ref{fig:influence_artilces}. This is no coincidence, we chose this category, because it has a reputation for being very organized. Military History is a "WikiProject" with a hierarchy of coordinators, an IRC channel, and a mailing list. As a result of the coordination there is less edit-warring and more focused attention in the category. Each visit to the page by good editors has a definite, productive task at hand. This can also be seen by the $\beta \leq 0$ editor influence \ref{fig:influence_editors}, that super-users are linearly or super-linearly rewarded in rank for their contributions. It requires a frictionless, collaborative environment where the more you edit, the more and more experienced you become. It's also worth noting that \cite{keegan2012}, found that "coordination demands influence the tendency of editors with similar levels of experience to work together". In our scenario that would mean that the coordination present attracts super-users to work in the productive environment. The category Military History is empirically a standout case of collaboration, and shows in its calibrated $\beta$ measurements. 
 
 Why is the measure beta relevant in the socio-technico world?
 
