--- a/paper/tmaillart.bib
+++ b/paper/tmaillart.bib
@@ -16213,3 +16213,24 @@ Statistical Network Analysis of Wikipedia Coauthorship},
   organization={ACM},
   location={Seattle, Washington, USA}
 }
+
+
+@inproceedings{kane2009,
+	author = {Kane, G. C.}, 
+	year = {2009},
+	title =  {It’s a Network, Not an Encyclopedia: A Social Network
+Perspective on Wikipedia Collaboration},
+	journal = {Academy of Management Annual Meeting.}
+}
+
+@article{wilkhuber,
+	author = {Dennis M. Wilkinson and Bernardo A. Huberman},
+	title = {Assessing the value of cooperation in Wikipedia},
+	journal = {First Monday},
+	volume = {12},
+	number = {4},
+	year = {2007},
+	keywords = {},
+	abstract = {Since its inception six years ago, the online encyclopedia Wikipedia has accumulated 6.40 million articles and 250 million edits, contributed in a predominantly undirected and haphazard fashion by 5.77 million unvetted volunteers. Despite the apparent lack of order, the 50 million edits by 4.8 million contributors to the 1.5 million articles in the English–language Wikipedia follow strong certain overall regularities. We show that the accretion of edits to an article is described by a simple stochastic mechanism, resulting in a heavy tail of highly visible articles with a large number of edits. We also demonstrate a crucial correlation between article quality and number of edits, which validates Wikipedia as a successful collaborative effort.},
+	issn = {13960466},	url = {http://firstmonday.org/ojs/index.php/fm/article/view/1763}
+}
