ansewring model/grndtruth independence questions

--- a/paper/sections/data.tex
+++ b/paper/sections/data.tex
@@ -49,7 +49,13 @@ To calibrate $\alpha$ and $\beta$, we resorted to state-of-the-art ground-truth 
 
 The set $(\alpha^*,\beta^*)$ characterizes how value flows from editors to articles, and from articles to editors, in the bi-partite network of collaboration in Wikipedia.
 
-The ground-truth metrics used are taken from computer supported collaborative work literature. In trying to classify editor experience we acknowledge the proposal by Geiger and Halfaker \cite{geiger2013}, to move past edit count and use "labor hours". This accounts for the well decried fact that all edits are not equal, and rather counts the temporal length and editor has spend editing. It is calculated for each editor by taking contribution history up to the snapshot point. All edits made within 1 hour of a previous edit are counted in an {\it edit session}. If more than one hour separates two edits, a new period of edits  starts. The expertise expressed in labor hours is the sum of edit sessions. For the calculation of ground-truth expertise, we only consider edits for a given category, although the same editor might have edited other categories of articles in Wikipedia. Our measure of actual article quality is performed through a combination of 5 text analysis metrics: (i) ratio of mark-up to readable text, (ii) number of headings, (iii) article length, (iv) citations per article length, (v) outgoing intra-Wiki links. These metrics are used to determine quality on Wikipedia \cite{wang2013tell} \cite{klein}, and have been used in the CSCW literature in different combinations \cite{kane2011} \cite{keegan2012}. We performed principal component analysis (PCA) for each category and snapshot in order to reduce dimensionality from 5 metrics to a single one (i.e. the principal component). The variance explained by the principal component varied between 0.5 and 0.72, confirming the dominance of the axis of maximum variance.
+The ground-truth metrics used are taken from computer supported collaborative work literature. In trying to classify editor experience we acknowledge the proposal by Geiger and Halfaker \cite{geiger2013}, to move past edit count and use "labor hours". This accounts for the well decried fact that all edits are not equal, and rather counts the temporal length and editor has spend editing. It is calculated for each editor by taking contribution history up to the snapshot point. All edits made within 1 hour of a previous edit are counted in an {\it edit session}. If more than one hour separates two edits, a new period of edits  starts. The expertise expressed in labor hours is the sum of edit sessions. For the calculation of ground-truth expertise, we only consider edits for a given category, although the same editor might have edited other categories of articles in Wikipedia. 
 
-A further point should be made about whether our exogenous expertise and quality measures are independent. Earlier on links between expert editors and quality articles were claimed \cite{wilkshuber}, and would seem intuitive. Yet, subsequently, there have been claims against such universal links which point out that key social interactions are not accounted for with these measures \cite{kane2009}. Intuitively this link rests on the collaborativeness of the articles and editors in question. With collaboration expertise will transtlate into article quality. However, given antagonistic, warring editors expertise will not improve article quality.
+Our measure of actual article quality is performed through a combination of 5 text analysis metrics: (i) ratio of mark-up to readable text, (ii) number of headings, (iii) article length, (iv) citations per article length, (v) outgoing intra-Wiki links. These metrics are used to determine quality on Wikipedia \cite{wang2013tell} \cite{klein}, and have been used in the CSCW literature in different combinations \cite{kane2011} \cite{keegan2012}. We performed principal component analysis (PCA) for each category and snapshot in order to reduce dimensionality from 5 metrics to a single one (i.e. the principal component). The variance explained by the principal component varied between 0.5 and 0.72, confirming the dominance of the axis of maximum variance.
+
+Since we are attempting to optimize the rank correlation between our model and ground-truth we must make the point on how they qualitatively differ, otherwise high correlations would come as no surprise. First lets turn our attention to editor rankings. Labor hours are focused around user editing and are completely agnostic to the page which has been edited. A single minded user spending 100 hours on a single article trying to get it to "Feature Article status" has made the same labor hour efforts as a user making 100 stub articles for an hour each. Yet depending on our amount of preferential attachment in our network, one or the other could be seen as a superior editor. Likewise on pages, an article text can be changed in 5 ways. The same edits could be made by one generalist editor or 5 specialist editors, and the ground-truth would not change. Depending on a different preferential attachment parameter in the model could rank each of these very differently.
+
+Finally a point should be made about whether our exogenous expertise and quality measures are independent. Earlier on links between expert editors and quality articles were claimed \cite{wilkshuber}, and would seem intuitive. Yet, subsequently, there have been claims against such universal links which point out that key social interactions are not accounted for with these measures \cite{kane2009}. Intuitively this link rests on the collaborativeness of the articles and editors in question. With collaboration expertise will transtlate into article quality. However, given antagonistic, warring- editors expertise will not improve article quality.
+
+
 
