add two more cscw references in discussion, and how we solve their contradictions, plus then move implacations to conclusions

--- a/paper/tmaillart.bib
+++ b/paper/tmaillart.bib
@@ -16271,4 +16271,11 @@ approach to examining the communities involved in Wikipedia},
  url = {http://www.iis.sinica.edu.tw/page/jise/2014/201405_03.pdf}
 }
 
-
+@inproceedings{kittur08,
+  title={Harnessing the wisdom of
+crowds in Wikipedia: quality through coordination.},
+  author={Kittur, A., Kraut, R. E.},
+  booktitle={CSCW’08,},
+  year={2008},
+  organization={ACM},
+}
